added instruction on vendor page

--- a/public/vendor.html
+++ b/public/vendor.html
@@ -275,6 +275,122 @@
   <!--Section: Cards-->
 
   </div>
+
+  <div class="row">
+    <div class="col ">
+      <div class="container mt-5">
+        <!--Section: Content-->
+        <section>
+
+          <!-- Section heading -->
+          <h3 class="font-weight-bold black-text mb-4 pb-2 text-center">Instructions</h3>
+          <hr class="w-header">
+          <!-- Section description -->
+          <p class="lead text-muted mx-auto mt-4 pt-2 mb-5 text-center">Follow these quick steps</p>
+
+          <div class="row">
+            <div class="col-md-12 col-lg-10 mx-auto mb-5">
+
+              <!--Accordion wrapper-->
+              <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+
+                <!-- Accordion card -->
+                <div class="card border-top border-bottom-0 border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom border-light" role="tab" id="headingOne1">
+                    <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true"
+                      aria-controls="collapseOne1">
+                      <h5 class="black-text font-weight-normal mb-0">
+                        1) Submit the required information in the form above <i class="fas fa-angle-down rotate-icon"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1"
+                    data-parent="#accordionEx">
+                    <div class="card-body">
+                      A) Fill in the store name, store address, along with the googlesheets URL and then hit the "submit" button.
+                      <br>
+                      B) Obtain your googlesheets URL by copying the exact URL of the googlesheet you plan to use.
+                    </div>
+                  </div>
+
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-bottom-0 border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom border-light" role="tab" id="headingTwo2">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2"
+                      aria-expanded="false" aria-controls="collapseTwo2">
+                      <h5 class="black-text font-weight-normal mb-0">
+                        2) Connect your personal googlesheets to our App <i class="fas fa-angle-down rotate-icon"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2"
+                    data-parent="#accordionEx">
+                    <div class="card-body">
+                      A) Once the form is submitted, please click the "connect to googlesheets" button
+                      <br>
+                      B) Then log-in to your google account.
+                    </div>
+                  </div>
+
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-bottom-0 border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom border-light" role="tab" id="headingThree3">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
+                      aria-expanded="false" aria-controls="collapseThree3">
+                      <h5 class="black-text font-weight-normal mb-0">
+                        3) Upload products onto our site<i class="fas fa-angle-down rotate-icon"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3"
+                    data-parent="#accordionEx">
+                    <div class="card-body">
+                      A) Please upload the products you wish to display on our 
+                      site onto your personal googlesheet
+                      <br>
+                      B) Please fill out your googlesheet with the following sample format
+                      given by clicking the "Sample Format" button below
+                      <a href="https://docs.google.com/spreadsheets/d/16MDoo13JCiftl75XIUqiF0B0lKet7Wl7MO64KjQNvM0/edit#gid=0" target="_blank"><button class="btn btn-unique btn-sm">Sample Format</button></a>
+                      <br>
+                      Note: columns must be in the correct order as given in the samplesheet
+                    </div>
+                  </div>
+
+              </div>
+              <!-- Accordion wrapper -->
+
+            </div>
+          </div>
+
+        </section>
+
+
+      </div>
+
+    </div>
+
+  </div>
+
+
+
   </main>
   <!--Main layout-->
 
