--- a/public/market.html
+++ b/public/market.html
@@ -116,7 +116,7 @@
             <a class="nav-link" href="./login.html">Sign-up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./vendor2.html">Settings</a>
+            <a class="nav-link" href="./vendor.html">Settings</a>
           </li>
         </ul>
       </div>
