--- a/public/personal_store.html
+++ b/public/personal_store.html
@@ -68,7 +68,7 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="./vendor2.html">Home
+            <a class="nav-link" href="./vendor.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
