--- a/public/sdrawkcaB.html
+++ b/public/sdrawkcaB.html
@@ -191,7 +191,7 @@
             <a class="nav-link" href="./login.html">Sign-up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./vendor2.html">Settings</a>
+            <a class="nav-link" href="./vendor.html">Settings</a>
           </li>
         </ul>
       </div>
