--- a/public/vendor.html
+++ b/public/vendor.html
@@ -123,7 +123,7 @@
             <a class="nav-link" href="./login.html">Sign-up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./vendor2.html">Settings</a>
+            <a class="nav-link" href="./vendor.html">Settings</a>
           </li>
         </ul>
       </div>
@@ -173,7 +173,7 @@
             </div>
             <div class="row">
               <div class="col">
-                <a href="./vendor2.html" class="btn btn-unique btn-md">
+                <a href="./vendor.html" class="btn btn-unique btn-md">
                   Update Changes from Googlesheets
                   <i class="fas fa-graduation-cap ml-2"></i>
                 </a>
